part3/3_04/manifests/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-svc-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-svc
  template:
    metadata:
      labels:
        app: project-svc
    spec:
      containers:
        - name: service-container
          image: BACKEND_IMAGE
