part3/3_04/manifests/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
        - name: app-container
          image: FRONTEND_IMAGE
          volumeMounts:
              - name: config #override config.js file
                mountPath: "/usr/share/nginx/html/config.js"
                subPath: "config.js"
      volumes:
          - name: config
            configMap:
                name: project-app-config
                items:
                    - key: "app.properties"
                      path: "config.js"
