part3/3_04/manifests/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project-svc
  ports:
    - name: back-http-port
      port: 2346
      targetPort: 3001
